human_written_tests/WebAssembly/processed_control_flow_validation/test_unreachable_106.wast
(assert_invalid
  (module (func $type-cont-last-void-vs-empty (result i32)
    (loop (br 0 (nop)))
  ))
  "type mismatch"
)